WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141304
[WK2] Properly check for mmap() error case
https://bugs.webkit.org/show_bug.cgi?id=141304
Summary
[WK2] Properly check for mmap() error case
Chris Dumez
Reported
2015-02-05 13:58:17 PST
mmap() returns MAP_FAILED, which is (void*)-1, not a null pointer in case of failure.
Attachments
Patch
(3.79 KB, patch)
2015-02-05 14:03 PST
,
Chris Dumez
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-02-05 14:03:18 PST
Created
attachment 246128
[details]
Patch
Chris Dumez
Comment 2
2015-02-05 14:13:14 PST
Committed
r179707
: <
http://trac.webkit.org/changeset/179707
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug