[WK2] Properly check for mmap() error case https://bugs.webkit.org/show_bug.cgi?id=141304

Reviewed by Anders Carlsson.

mmap() returns MAP_FAILED, which is (void*)-1, not a null pointer in
case of failure. This patch updates several wrong error checks in
WebKit2.

* Platform/IPC/ArgumentEncoder.cpp:
(IPC::allocBuffer):
(IPC::ArgumentEncoder::reserve):
* Platform/IPC/mac/ConnectionMac.mm:
(IPC::Connection::sendOutgoingMessage):

Canonical link: https://commits.webkit.org/159325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179707 268f45cc-cd09-0410-ab3c-d52691b4dbfc