Source/WebKit2/Platform/IPC/ArgumentEncoder.cpp
@@ -36,12 +36,15 @@
 
 namespace IPC {
 
-static inline void* allocBuffer(size_t size)
+template <typename T>
+static inline bool allocBuffer(T*& buffer, size_t size)
 {
 #if OS(DARWIN)
-    return mmap(0, size, PROT_READ | PROT_WRITE, MAP_ANON | MAP_PRIVATE, -1, 0);
+    buffer = static_cast<T*>(mmap(0, size, PROT_READ | PROT_WRITE, MAP_ANON | MAP_PRIVATE, -1, 0));
+    return buffer != MAP_FAILED;
 #else
-    return fastMalloc(size);
+    buffer = static_cast<T*>(fastMalloc(size));
+    return !!buffer;
 #endif
 }
 
@@ -90,8 +93,8 @@ void ArgumentEncoder::reserve(size_t size)
     while (newCapacity < size)
         newCapacity *= 2;
 
-    uint8_t* newBuffer = static_cast<uint8_t*>(allocBuffer(newCapacity));
-    if (!newBuffer)
+    uint8_t* newBuffer;
+    if (!allocBuffer(newBuffer, newCapacity))
         CRASH();
 
     memcpy(newBuffer, m_buffer, m_bufferSize);
